# Dev

./: .gitignore  README.md
.cargo/: config.toml
asm/aarch64/libc/linux/: strcmp.s  strlen.s
asm/aarch64/linux/program/: Makefile  program.s
asm/aarch64/windows/program/: Makefile.ps1  program.asm
asm/x86_64/libc/linux/: crc64.inc
asm/x86_64/linux/dynamic/: Makefile  program-1.1.s  program-2.0.s  program-2.1.s  program.s
asm/x86_64/windows/program/: Makefile.ps1
cpp/linux/archive/dynamic_linker/: Makefile  program.cpp
cpp/linux/program/: Makefile  program.cpp
cpp/linux/program/1.1/: Makefile
cpp/linux/program/1.1/src/: program.cpp
lib/src/: panic.rs
lib/src/platform/: mod.rs
lib/src/platform/linux/asm/x86_64/: start.s
lib/src/platform/windows/: mod.rs  platform.rs
lib/src/platform/windows/asm/x86_64/: start.s
lib/src/platform/windows/scheme/: pe.rs
lib/src/utilities/: mod.rs
lib/src/utilities/hash/: mod.rs
rust/IDLEMILK/: Cargo.toml  README.md
rust/IDLEMILK/lib/: Cargo.toml
rust/IDLEMILK/lib/src/: externs.rs  lib.rs
rust/IDLEMILK/lib/src/platform/linux/: mod.rs  platform.rs
rust/IDLEMILK/lib/src/platform/linux/scheme/: elf.rs  link.rs  mod.rs
rust/IDLEMILK/lib/src/platform/windows/scheme/: mod.rs  ntdef.rs  peb.rs
rust/IDLEMILK/lib/src/utilities/: shared_object.rs
rust/IDLEMILK/lib/src/utilities/hash/: crc64.rs
rust/IDLEMILK/src/launcher/: Cargo.toml
rust/IDLEMILK/src/launcher/src/: main.rs
